# avtomatika-full-example

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README_RU.md  client.py  config.py  docker-compose.yml  example_clients.toml  example_workers.toml  full_example.py  generate_graphs.py  pyproject.toml  requirements.txt  schedules.toml  webhook_receiver.py
blueprints/: __init__.py  main.py  maintenance.py  sub.py
ops/grafana/dashboards/: avtomatika_overview.json
ops/grafana/datasources/: datasource.yml
ops/prometheus/: prometheus.yml
tests/: test_integration.py
workers/: cpu_reliable.py  cpu_unreliable.py  gpu.py
